# co2calculator

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  Pipfile  README.md  api.html  businesstrips.html  commuting.html  degree_days.ipynb  documentation.html  genindex.html  index.html  mobility.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  run_calculate.py  sample.env  search.html  searchindex.js  tutorial.html
.doctrees/: api.doctree  businesstrips.doctree  commuting.doctree  documentation.doctree  environment.pickle  index.doctree  mobility.doctree  tutorial.doctree
.doctrees/calculate/: distances.doctree  electricity.doctree  emission_factors.doctree  energy.doctree  heating.doctree  heating_electricity.doctree  transport_modes.doctree
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: ci-development.yml  ci-production.yml  documentation.yml  tests.yml
_modules/: index.html
_modules/co2calculator/: calculate.html  distances.html
_sources/: api.rst.txt  commuting.rst.txt  index.rst.txt  mobility.rst.txt
_sources/calculate/: distances.rst.txt  electricity.rst.txt  emission_factors.rst.txt  heating.rst.txt  transport_modes.rst.txt
_static/: alabaster.css  basic.css
calculate/: distances.html  electricity.html  emission_factors.html  energy.html  heating.html  heating_electricity.html  transport_modes.html
co2calculator/: ERA5_recurring_download.py  __init__.py  _types.py  calculate.py  clip_era5.py  constants.py  data_handlers.py  degree_days.py  distances.py  enums.py  exceptions.py  parameters.py  reader.py  test_gcd.py  util.py  utils.py
co2calculator/api/: emission.py  emission_factor.py  (+3 more)
data/: Emissionsfaktoren_Uni_Heidelberg.xlsx  conversion_factors_heating.csv  data_here.txt  detour.csv  emission_factors.csv  emission_factors_bus.csv  emission_factors_car.csv  emission_factors_electricity.csv  emission_factors_heating.csv  emission_factors_old.csv  emission_factors_other.csv  emission_factors_plane.csv  emission_factors_train.csv  emission_factors_transport.csv  heating_costs.xlsx  parse_xmls.py  structure_electricity_from_renewables.xlsx
docs/: businesstrips.rst  commuting.rst  conf.py  distances.rst  documentation.md  documentation_co2calculator.md  documentation_workinggroups.md  index.rst  tutorial.md
streamlit_app/: app.py  app3.py
tests/: test_calculate.py  test_distances.py
(+162 files in other folders)
