[tool.poetry]
name = "co2calculator"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "~1.4"
numpy = "~1.22"
openrouteservice = "~2.3"
python-dotenv = "~0.20"
thefuzz = "~0.19"

[tool.poetry.dev-dependencies]
pytest = "~6.2"
pytest-mock = "~3.6"
pytest-cov = "~3.0"
pre-commit = "^2.17.0"
Sphinx = "^4.4.0"
sphinx-toolbox = "^2.18.0"
Pygments = "^2.11.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
