[tool.poetry]
name = "co2calculator"
version = "0.1.0"
description = "Calculates CO2e emissions from travel and commuting as well as heating and electricity consumption of buildings"
authors = ["pledge4future Team <info@pledge4future.org>"]
license = "GPL 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
openrouteservice = "^2.3.3"
pydantic = "1.9.0"
iso3166 = "^2.1.1"
python-dotenv = "^1.0.1"
thefuzz = "^0.22.1"
coverage-badge = "^1.1.1"
coverage = "^7.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pygments = "^2.17.2"
Sphinx = "^7.3.7"
sphinx-toolbox = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
